# rust-interview

./: .gitignore  Cargo.toml  OptimizationChecklist.md  README.md  data.csv
src/: data_app.rs  db_app.rs  fs_app.rs  gcd_mod.rs  json_parser.rs  main.rs  parallel_app.rs  prime_nums.rs  quick_sort.rs  stack_linked_list.rs  stack_mod.rs  web_app.rs
